Refactored vertical gutters to two

--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -77,16 +77,12 @@ $grid-gutters: (
 Vertical gutters are the gaps below rows of grid cells.
 Use rems.
 */
-$vertical-gutter: 1.5rem;
-$phablet-vertical-gutter: 1.5rem;
-$tablet-portrait-vertical-gutter: 2.25rem;
-$tablet-landscape-vertical-gutter: 2.25rem;
-$notebook-vertical-gutter: 2.25rem;
-$desktop-vertical-gutter: 2.25rem;
-$elastic-vertical-gutter: 2.25rem;
+
+$gridcell-vertical-gutter: 1.5rem;
+$grid-vertical-gutter: 3rem;
 
 /* FORMS
 Sizes for various form elements, like fieldset row spacing.
 */
-$fieldset-row-spacing: 1.25rem;
+$fieldset-row-spacing: 1.5rem;
 
