--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -102,7 +102,7 @@ body {
 
             & > article[role="region"] {
 
-                @include set-bottom-vertical-gutter();
+                margin-bottom: $grid-vertical-gutter;
             }
 
             article {
