--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -23,6 +23,7 @@
     $gridcell-width:one-whole, // Grid cell widths (all the same; e.g. one-half)
     $gutter:false,             // Horizontal gutter (e.g. 5%, 3rem)
     $row-gutter:false,         // Bottom margin (gutter) when grid cells wrap, except for the last row (e.g. 3rem)
+    $grid-bottom-gutter:false, // Bottom margin (gutter) for the grid as a whole (e.g. 3rem)
 
     $justify-content:flex-start,
     $align-items:flex-start,
@@ -121,13 +122,13 @@
 
     @if ($from-breakpoint == zero) {
 
-        @include sf-render-grid($centered-grid, $align-items, $justify-content, $gridcell-width, $gutter, $row-gutter);
+        @include sf-render-grid($centered-grid, $align-items, $justify-content, $gridcell-width, $gutter, $row-gutter, $grid-bottom-gutter);
 
     } @else {
 
         @include sf-media($from: $from-breakpoint, $upto: $upto-breakpoint) {
 
-            @include sf-render-grid($centered-grid, $align-items, $justify-content, $gridcell-width, $gutter, $row-gutter);
+            @include sf-render-grid($centered-grid, $align-items, $justify-content, $gridcell-width, $gutter, $row-gutter, $grid-bottom-gutter);
         }
     }
 }
@@ -138,7 +139,8 @@
     $justify-content,
     $gridcell-width,
     $gutter,
-    $row-gutter
+    $row-gutter,
+    $grid-bottom-gutter
     ) {
 
     display: #{$sf-fbg-display};
@@ -156,16 +158,12 @@
 
     @if ($row-gutter != false) {
 
-        & + & {
+        margin-bottom: #{$row-gutter * -1};
+    }
 
-            margin-bottom: 0;
-        }
+    @if ($grid-bottom-gutter != false) {
 
-        & + &:last-child, &:last-child,
-        & + &:last-of-type, &:last-of-type {
-
-            margin-bottom: #{$row-gutter * -1};
-        }
+        margin-bottom: #{$grid-bottom-gutter};
     }
 
     flex-grow: #{$sf-fbg-flex-grow};
