--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -11,8 +11,8 @@ body {
 
         @include sf-media($from: tablet-portrait) {
 
-            padding-top: 2.25rem;
-            padding-bottom: 2.25rem;
+            padding-top: 3rem;
+            padding-bottom: 3rem;
         }
 
         #logo {
@@ -35,23 +35,19 @@ body {
 
                     &:nth-child(1) {
 
-                        width: 15%;
+                        @include sf-set-width (
+                            $width: 15%
+                        );
+
                         margin-right: 1%;
 
-                        @include sf-media($from: tablet-portrait) {
-                         
-                            width: 5%;
-                        }
+                        @include sf-set-width (
+                            $from: tablet-portrait,
+                            $width: 5%
+                        );
                     }
 
                     &:nth-child(2) {
-
-                        width: 84%;
-
-                        @include sf-media($from: tablet-portrait) {
-
-                            width: 64%;
-                        }
 
                         h1 {
 
@@ -80,26 +76,30 @@ body {
 
                     &:nth-child(3) {
 
-                        width: 100%;
                         margin-top: 1.5rem;
                         font-size: 1.25rem;
                         text-align: center;
 
                         @include sf-media($from: tablet-portrait) {
 
-                            width: 30%;
                             margin-top: 0;
                             text-align: right;
                         }
 
                         h3, h4 {
 
+                            margin-top: 0;
                             color: sf-get-color(slate);
                         }
 
                         h3 {
 
                             margin-bottom: 0.5rem;
+                        }
+
+                        h4 {
+
+                            margin-bottom: 0;
                         }
                     }
                 }
