--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -78,7 +78,7 @@ $desktop-vertical-subunit-padding: 3rem;
 $elastic-vertical-subunit-padding: 3rem;
 
 
-/* GUTTERS
+/* DEFAULT GUTTERS
 Gutters are the gaps between grid cells. 
 Use percentages or rems.
 */
