--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -304,6 +304,61 @@
     flex-direction: row-reverse;
 }
 
+@mixin sf-set-gutter (
+    $from:false,
+    $upto:false,
+    $gutter:false
+) {
+
+    $from-breakpoint: $from;
+    $upto-breakpoint: $upto;
+
+    @if ($from == false and $upto == false) {
+
+        $from-breakpoint: zero;
+    }
+
+    @if ($gutter != false) {
+
+        @if (sf-get-unit($gutter) == "") {
+
+            $gutter: to-length($gutter, "%");
+        }
+    }
+
+    @if ($from-breakpoint == zero) {
+
+        @if ($gutter != false) {
+
+            margin-left: #{$gutter/2 * -1};
+            margin-right: #{$gutter/2 * -1};
+    
+            > [role="gridcell"] {
+        
+                padding-left: #{$gutter/2};
+                padding-right: #{$gutter/2};
+            }
+        }
+
+    } @else {
+
+        @include sf-media($from: $from-breakpoint, $upto: $upto-breakpoint) {
+
+            @if ($gutter != false) {
+
+                margin-left: #{$gutter/2 * -1};
+                margin-right: #{$gutter/2 * -1};
+        
+                > [role="gridcell"] {
+            
+                    padding-left: #{$gutter/2};
+                    padding-right: #{$gutter/2};
+                }
+            }
+        }
+    }
+}
+
 @mixin sf-set-width (
     $from:false,
     $upto:false,
