--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -14,92 +14,117 @@ body {
             padding-top: 3rem;
             padding-bottom: 3rem;
         }
+    }
 
-        #logo {
+    #logo, #logo-sample {
 
-            padding: 0 $horizontal-unit-padding;
+        padding: 0 $horizontal-unit-padding;
+
+        @include sf-media($from: tablet-portrait) {
+
+            padding: 0 $tablet-portrait-horizontal-unit-padding;
+        }
+
+        @include sf-media($from: elastic) {
+
+            padding: 0;
+        }
+
+        [role="grid"] {
+
+            > [role="gridcell"] {
+
+                &:nth-child(1) {
+
+                    @include sf-set-width (
+                        $width: 15%
+                    );
+
+                    margin-right: 1%;
+
+                    @include sf-set-width (
+                        $from: tablet-portrait,
+                        $width: 5%
+                    );
+                }
+
+                &:nth-child(2) {
+
+                    h1 {
+
+                        margin: 0;
+                        padding: 0;
+                        line-height: 0.83;
+                        font-weight: 400;
+                        font-family: $font-logo;
+                        text-align: right;
+                        font-size: 3.65rem;
+
+                        @include sf-media($from: tablet-portrait) {
+
+                            font-size: 4.5rem;
+                            line-height: 0.75;
+                            text-align: left;
+                        }
+
+                        a {
+
+                            color: sf-get-color(slate);
+                            text-decoration: none;
+                        }
+                    }
+                }
+
+                &:nth-child(3) {
+
+                    margin-top: 1.5rem;
+                    font-size: 1.25rem;
+                    text-align: center;
+
+                    @include sf-media($from: tablet-portrait) {
+
+                        margin-top: 0;
+                        text-align: right;
+                    }
+
+                    h3, h4 {
+
+                        margin-top: 0;
+                        color: sf-get-color(slate);
+                    }
+
+                    h3 {
+
+                        margin-bottom: 0.5rem;
+                    }
+
+                    h4 {
+
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
+
+        &#logo-sample {
+
+            padding: 1rem;
+            border: solid $mobile-lw-1px sf-get-color(graylight);
 
             @include sf-media($from: tablet-portrait) {
 
-                padding: 0 $tablet-portrait-horizontal-unit-padding;
-            }
-
-            @include sf-media($from: elastic) {
-
-                padding: 0;
+                border: solid $lw-1px sf-get-color(graylight);
             }
 
             [role="grid"] {
 
                 > [role="gridcell"] {
 
-                    &:nth-child(1) {
-
-                        @include sf-set-width (
-                            $width: 15%
-                        );
-
-                        margin-right: 1%;
-
-                        @include sf-set-width (
-                            $from: tablet-portrait,
-                            $width: 5%
-                        );
-                    }
-
                     &:nth-child(2) {
 
                         h1 {
 
-                            margin: 0;
-                            padding: 0;
-                            line-height: 0.83;
-                            font-weight: 400;
-                            font-family: $font-logo;
-                            text-align: right;
-                            font-size: 3.65rem;
-
-                            @include sf-media($from: tablet-portrait) {
-
-                                font-size: 4.5rem;
-                                line-height: 0.75;
-                                text-align: left;
-                            }
-
-                            a {
-
-                                color: sf-get-color(slate);
-                                text-decoration: none;
-                            }
-                        }
-                    }
-
-                    &:nth-child(3) {
-
-                        margin-top: 1.5rem;
-                        font-size: 1.25rem;
-                        text-align: center;
-
-                        @include sf-media($from: tablet-portrait) {
-
-                            margin-top: 0;
-                            text-align: right;
-                        }
-
-                        h3, h4 {
-
-                            margin-top: 0;
-                            color: sf-get-color(slate);
-                        }
-
-                        h3 {
-
-                            margin-bottom: 0.5rem;
-                        }
-
-                        h4 {
-
-                            margin-bottom: 0;
+                            font-size: 3.25rem;
                         }
                     }
                 }
