--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -628,7 +628,7 @@ html h2 {
 
 /* line 234, styleguide/scss/core/_core-initialize.scss */
 html h3 {
-  font-size: 1.2rem;
+  font-size: 1.35rem;
   line-height: 1.35;
 }
 
@@ -648,7 +648,7 @@ html h3 {
 
 /* line 288, styleguide/scss/core/_core-initialize.scss */
 html h4 {
-  font-size: 1rem;
+  font-size: 1.125rem;
   line-height: 1.35;
 }
 
@@ -6689,42 +6689,42 @@ body > header {
   }
 }
 
-/* line 18, styleguide/scss/custom/_layout-header.scss */
-body > header #logo {
+/* line 19, styleguide/scss/custom/_layout-header.scss */
+body #logo, body #logo-sample {
   padding: 0 1.25rem;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 18, styleguide/scss/custom/_layout-header.scss */
-  body > header #logo {
+  /* line 19, styleguide/scss/custom/_layout-header.scss */
+  body #logo, body #logo-sample {
     padding: 0 3rem;
   }
 }
 
 @media screen and (min-width: 75em) {
-  /* line 18, styleguide/scss/custom/_layout-header.scss */
-  body > header #logo {
+  /* line 19, styleguide/scss/custom/_layout-header.scss */
+  body #logo, body #logo-sample {
     padding: 0;
   }
 }
 
-/* line 36, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(1) {
+/* line 37, styleguide/scss/custom/_layout-header.scss */
+body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) {
   width: 15%;
   flex-grow: 0;
   margin-right: 1%;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 36, styleguide/scss/custom/_layout-header.scss */
-  body > header #logo [role="grid"] > [role="gridcell"]:nth-child(1) {
+  /* line 37, styleguide/scss/custom/_layout-header.scss */
+  body #logo [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) {
     width: 5%;
     flex-grow: 0;
   }
 }
 
-/* line 52, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
+/* line 53, styleguide/scss/custom/_layout-header.scss */
+body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
   margin: 0;
   padding: 0;
   line-height: 0.83;
@@ -6735,49 +6735,67 @@ body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 52, styleguide/scss/custom/_layout-header.scss */
-  body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
+  /* line 53, styleguide/scss/custom/_layout-header.scss */
+  body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
     font-size: 4.5rem;
     line-height: 0.75;
     text-align: left;
   }
 }
 
-/* line 69, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 a {
+/* line 70, styleguide/scss/custom/_layout-header.scss */
+body #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 a, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 a {
   color: #2b303a;
   text-decoration: none;
 }
 
-/* line 77, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) {
+/* line 78, styleguide/scss/custom/_layout-header.scss */
+body #logo [role="grid"] > [role="gridcell"]:nth-child(3), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) {
   margin-top: 1.5rem;
   font-size: 1.25rem;
   text-align: center;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 77, styleguide/scss/custom/_layout-header.scss */
-  body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) {
+  /* line 78, styleguide/scss/custom/_layout-header.scss */
+  body #logo [role="grid"] > [role="gridcell"]:nth-child(3), body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) {
     margin-top: 0;
     text-align: right;
   }
 }
 
-/* line 89, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) h3, body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) h4 {
+/* line 90, styleguide/scss/custom/_layout-header.scss */
+body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h4, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h4 {
   margin-top: 0;
   color: #2b303a;
 }
 
-/* line 95, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) h3 {
+/* line 96, styleguide/scss/custom/_layout-header.scss */
+body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h3 {
   margin-bottom: 0.5rem;
 }
 
-/* line 100, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) h4 {
+/* line 101, styleguide/scss/custom/_layout-header.scss */
+body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h4, body #logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h4 {
   margin-bottom: 0;
+}
+
+/* line 109, styleguide/scss/custom/_layout-header.scss */
+body #logo#logo-sample, body #logo-sample#logo-sample {
+  padding: 1rem;
+  border: solid 0.08rem #cdcdcd;
+}
+
+@media screen and (min-width: 33.75em) {
+  /* line 109, styleguide/scss/custom/_layout-header.scss */
+  body #logo#logo-sample, body #logo-sample#logo-sample {
+    border: solid 0.08rem #cdcdcd;
+  }
+}
+
+/* line 125, styleguide/scss/custom/_layout-header.scss */
+body #logo#logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample#logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
+  font-size: 3.25rem;
 }
 
 /* line 7, styleguide/scss/custom/_layout-footer.scss */
