--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -109,6 +109,7 @@ body {
         &#logo-sample {
 
             padding: 1rem;
+            background-color: sf-get-color(graylightest);
             border: solid $mobile-lw-1px sf-get-color(graylight);
 
             @include sf-media($from: tablet-portrait) {
@@ -120,11 +121,44 @@ body {
 
                 > [role="gridcell"] {
 
+                    &:nth-child(1) {
+
+                        @include sf-set-width (
+                            $width: 15%
+                        );
+    
+                        margin-right: 1%;
+    
+                        @include sf-set-width (
+                            $from: tablet-portrait,
+                            $width: 4.5%
+                        );
+                    }
+    
                     &:nth-child(2) {
 
                         h1 {
 
-                            font-size: 3.25rem;
+                            font-size: 3.2rem;
+
+                            @include sf-media($from: tablet-portrait) {
+
+                                font-size: 3.75rem;
+                            }
+                        }
+                    }
+
+                    &:nth-child(3) {
+
+                        h3 {
+    
+                            margin-bottom: 0.25rem;
+                            font-size: 1.1rem;
+                        }
+    
+                        h4 {
+    
+                            font-size: 0.9rem;
                         }
                     }
                 }
