--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -6783,6 +6783,7 @@ body #logo [role="grid"] > [role="gridcell"]:nth-child(3) h4, body #logo-sample 
 /* line 109, styleguide/scss/custom/_layout-header.scss */
 body #logo#logo-sample, body #logo-sample#logo-sample {
   padding: 1rem;
+  background-color: #f5f5f5;
   border: solid 0.08rem #cdcdcd;
 }
 
@@ -6793,9 +6794,42 @@ body #logo#logo-sample, body #logo-sample#logo-sample {
   }
 }
 
-/* line 125, styleguide/scss/custom/_layout-header.scss */
+/* line 124, styleguide/scss/custom/_layout-header.scss */
+body #logo#logo-sample [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample#logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) {
+  width: 15%;
+  flex-grow: 0;
+  margin-right: 1%;
+}
+
+@media screen and (min-width: 33.75em) {
+  /* line 124, styleguide/scss/custom/_layout-header.scss */
+  body #logo#logo-sample [role="grid"] > [role="gridcell"]:nth-child(1), body #logo-sample#logo-sample [role="grid"] > [role="gridcell"]:nth-child(1) {
+    width: 4.5%;
+    flex-grow: 0;
+  }
+}
+
+/* line 140, styleguide/scss/custom/_layout-header.scss */
 body #logo#logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample#logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
-  font-size: 3.25rem;
+  font-size: 3.2rem;
+}
+
+@media screen and (min-width: 33.75em) {
+  /* line 140, styleguide/scss/custom/_layout-header.scss */
+  body #logo#logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1, body #logo-sample#logo-sample [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
+    font-size: 3.75rem;
+  }
+}
+
+/* line 153, styleguide/scss/custom/_layout-header.scss */
+body #logo#logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h3, body #logo-sample#logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h3 {
+  margin-bottom: 0.25rem;
+  font-size: 1.1rem;
+}
+
+/* line 159, styleguide/scss/custom/_layout-header.scss */
+body #logo#logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h4, body #logo-sample#logo-sample [role="grid"] > [role="gridcell"]:nth-child(3) h4 {
+  font-size: 0.9rem;
 }
 
 /* line 7, styleguide/scss/custom/_layout-footer.scss */
